<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_1"
    android:background="@drawable/item_ripple_effect">
    <ImageView
        android:id="@+id/image_iv"
        android:layout_width="@dimen/iv_max_width"
        android:layout_height="@dimen/iv_max_width"
        android:src="@drawable/ic_launcher"
        />
    <TextView
        android:id="@+id/student_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/student_name_tv"
        android:layout_toRightOf="@+id/image_iv"
        android:textSize="@dimen/custom_row_used_size"/>
    <TextView
        android:id="@+id/student_name_enter_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/student_name_enter_tv"
        android:layout_toRightOf="@+id/student_name_tv"
        android:textSize="@dimen/custom_row_used_size"/>
    <TextView
        android:id="@+id/student_roll_no_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/student_roll_no_tv"
        android:layout_toRightOf="@+id/image_iv"
        android:layout_below="@id/student_name_tv"
        android:textSize="@dimen/custom_row_used_size"/>
    <TextView
        android:id="@+id/student_roll_no_enter_tv"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content"
        android:text="@string/student_roll_no_enter_tv"
        android:layout_toRightOf="@+id/student_roll_no_tv"
        android:layout_below="@id/student_name_tv"
        android:textSize="@dimen/custom_row_used_size"/>

</RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />
    </LinearLayout>